--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,20 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>3.3.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.0.2</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework/org.springframework.web -->
 		<!-- https://mvnrepository.com/artifact/org.springframework/org.springframework.web -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>io.rest-assured</groupId>
@@ -72,6 +81,7 @@
 			<artifactId>logback-classic</artifactId>
 			<version>1.5.6</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>postgresql</artifactId>
