--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,9 @@ spring.application.name=financial-api
 spring.datasource.url=jdbc:postgresql://localhost:5433/auth_database?schema=FINANCE
 spring.datasource.username=auth_user
 spring.datasource.password=auth_password
-spring.jpa.hibernate.ddl-auto=<create | create-drop | update | validate | none>
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+logging.level.root=INFO
+logging.level.org.springframework=INFO
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=FINANCE
+server.servlet.context-path=/swagger
