--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=financial-api
-spring.datasource.url=jdbc:postgresql://localhost:5433/auth_database?schema=FINANCE
+spring.datasource.url=jdbc:postgresql://localhost:5433/finance?schema=FINANCE
 spring.datasource.username=auth_user
 spring.datasource.password=auth_password
 logging.level.root=INFO
@@ -7,4 +7,4 @@ logging.level.org.springframework=INFO
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.default_schema=FINANCE
-server.servlet.context-path=/swagger
+server.servlet.context-path=/
