--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
 			<artifactId>javafaker</artifactId>
 			<version>0.15</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.slugify</groupId>
+			<artifactId>slugify</artifactId>
+			<version>3.0.7</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.springframework/org.springframework.web -->
 		<!-- https://mvnrepository.com/artifact/org.springframework/org.springframework.web -->
 		<dependency>
