--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,3 @@
-spring.application.name=financial-api
-spring.datasource.url=jdbc:postgresql://localhost:5432/finance
-spring.datasource.username=postgres
-spring.datasource.password=root
-logging.level.root=INFO
-logging.level.org.springframework=INFO
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.default_schema=FINANCE
-server.servlet.context-path=/
+
+
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
