--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.application.name=financial-api
-spring.datasource.url=jdbc:postgresql://localhost:5432/finance
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/finance
+spring.r2dbc.username=postgres
+spring.r2dbc.password=root
 logging.level.root=INFO
 logging.level.org.springframework=INFO
 spring.datasource.driver-class-name=org.postgresql.Driver
