--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+
 spring.jpa.hibernate.ddl-auto=create
 spring.application.name=financial-api
+spring.r2dbc.url=r2dbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.r2dbc.username=${DB_PASSWORD}
+spring.r2dbc.password=${DB_PASSWORD}
