--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 
 
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
+spring.jackson.time-zone=America/Guayaquil
+spring.application.name=financial-api
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/finance
+spring.r2dbc.username=postgres
+spring.r2dbc.password=root
